# ai-dial-general-purpose-agent-with-memory

./: pyproject.toml
task/: agent.py  app.py  prompts.py  prompts_profile.py
task/tools/memory/: memory_delete_tool.py  memory_search_tool.py  memory_store.py  memory_store_tool.py
task/tools/profile/: profile_updater.py  user_profile_store.py
